<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:background="#FF0026"
        android:onClick="click"
        android:text="@string/next"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_pr"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_pr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="60dp"
        android:background="#4AC35A"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="243dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_num"
        android:layout_width="177dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:text="@string/http_myfile_org"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="509dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="49dp"
        android:background="#03A9F4"
        android:text="@string/Фотоальбом"
        android:textColor="#51278F"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/text_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

</androidx.constraintlayout.widget.ConstraintLayout>